# ue4-cmake-boost-integration

./: .gitignore  CMakeLists.txt  README.md
config/: configurationFor2017.vsconfig
model/: .clang-format  CMakeLists.txt
model/core/: Actions.h  CMakeLists.txt  GameController.cpp  GameController.h  IGameModel.h  IGameObserver.h
model/offline/: CMakeLists.txt  OfflineGameModel.cpp  OfflineGameModel.h
ue4view/TurnBasedGame/: .gitignore  TurnBasedGame.uproject
ue4view/TurnBasedGame/Config/: DefaultEngine.ini  DefaultGame.ini
ue4view/TurnBasedGame/Source/: TurnBasedGame.Target.cs  TurnBasedGameEditor.Target.cs
ue4view/TurnBasedGame/Source/TurnBasedGame/: AGameViewController.cpp  AGameViewController.h  TurnBasedGame.Build.cs  TurnBasedGame.cpp  TurnBasedGameGameModeBase.cpp  TurnBasedGameGameModeBase.h
